src/FinancialForce ClickLink/objects/IntegrationRule__c.object
<CustomObject>
    <customHelpPage>helpintegrationrule</customHelpPage>
    <fields>
        <fullName>EmailTemplate__c</fullName>
        <label>Email Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartialSave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Saves target records even if other records in the batch fail to save.</description>
        <label>Partial Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceObjectNameField__c</fullName>
        <label>Source Object Name Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceObjectProcessField__c</fullName>
        <label>Source Object Process Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceObjectProcessedField__c</fullName>
        <label>Source Object Processed Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceObjectReferenceToTargetField__c</fullName>
        <label>Source Object Reference to Target</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceObject__c</fullName>
        <label>Source Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SyncIsMaster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TargetCreationOnSourceInsert__c</fullName>
        <label>Target Relation with Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One to Many</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetObjectNameField__c</fullName>
        <label>Target Object Name Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetObjectProcessedField__c</fullName>
        <label>Processed Field on Target</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetObjectSourceCountField__c</fullName>
        <label>Relation Count Field on Target</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetObjectSyncActiveField__c</fullName>
        <label>Target Object Sync Active Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetObjectSyncControlField__c</fullName>
        <label>Target Object Sync Control Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetObjectSyncControlWhen__c</fullName>
        <label>Target Object Sync Control When</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TargetObject__c</fullName>
        <label>Target Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetSourceMaximum__c</fullName>
        <label>Relation Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ClickLink Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SourceObject__c</columns>
        <columns>TargetObject__c</columns>
        <columns>SyncEnabled__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ClickLink Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>